<resources>
    <string name="app_name">HandinHand</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Log in</string>
    <string name="register"><u>Register</u></string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="forget_password_title">Forget Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="validate_email">Email is not Valid</string>
    <string name="validate_password">Wrong Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_photo">Tap to upload photo</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="re_enter_password">Re Enter password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="education_grade">Education grade</string>
    <string name="already_have_an_accuont"><u>Already have an account</u></string>
    <string name="reset_password_text">Don\'t worry. Resetting your password is easy, just tell us the email address you registered with <b>HandInHand</b></string>
    <string name="send_link">Send Link</string>
    <string name="re_enter_new_password">Re enter new Password</string>
    <string name="new_password">new Password</string>
    <string name="confirm">Confirm</string>
    <string name="empty">Empty cell</string>
    <string name="required">Required Cell</string>
    <string name="items">Items</string>
    <string name="handmades">Handmades</string>
    <string name="events">Events</string>
    <string name="notifications">Notifications</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="image_of_item">Image of item</string>
    <string name="item_name">Item Name</string>
    <string name="login_toast_error">"Email or Password isn't correct"</string>
    <string name="different">Different password!</string>
    <string name="undefined_error">Something went Wrong!</string>
    <string name="taken_email">The email has already been taken.</string>
    <string name="token_shared_preference">com.example.HandInHand.PREFERENCE_TOKEN_KEY</string>
    <string name="token">TOKEN_KEY</string>
    <string name="spam">Update 8th December 2019: Ive update this post to show how to implement the transition in lists using RecyclerView and the Navigation component.
The Navigation Component helps you implement common, but complex navigation requirements in your app, enabling you to more easily provide consistent and predictable experiences for your users.
This component also provides support for displaying transitions and share elements in the transitions between fragments.

Transitions occur when users move between fragments, such as from a list screen to a detail screen. The use of motion is a good choice to guide users between two screens in your app. They help users orient themselves by expressing your apps hierarchy, using movement to indicate how elements are related to one another.
For example, when an element expands to fill the entire screen, the expansion expresses that the new window is a child element or specifies the details. The screen from which it expanded is its parent element.

Navigation Component allows users to implement transitions between fragments and supports adding shared element transitions between destinations.
Shared element transitions are supplied programmatically rather than through your navigation XML file, as they require referencing the View instances that you wish to include in the shared element transition.
Implementation
For this example Ive implemented a simple transition between a fragment that contains an element and the detail fragment for this element.
Ive included the following dependency:
implementation androidx.navigation:navigation-fragment-ktx:2.2.0-rc02
This library needs that your project migrate to AndroidX. Ive used the Android KTX version of this library. If you dont want to use AndroidX, you can implement android.arch.navigation:navigation-fragment-ktx:1.0.0 instead.
The first step is create the fragments and define the relationship between them. Ive created two fragments: ParentFragment and DetailFragment. The two fragments are linked and the navigation graph presents the following aspect.
</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="error_message_layout">It seems that your connection time out or our server is down \n check your internet connection and reload the page</string>
    <string name="reload">RELOAD</string>
    <string name="details">Details</string>
    <string name="edit"><u>Edit</u></string>
    <string name="more">more</string>
    <string name="save">Save</string>
    <string name="change_or_remove_photo">Tap to change or remove photo</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="loading">Loading</string>
    <string name="report">Report</string>
    <string name="share">Share</string>
    <string name="change_password_url">http://2a25ce9546cf.ngrok.io/password/reset/</string>
    <string name="avatar_url">http://2a25ce9546cf.ngrok.io/storage/avatars/</string>
    <string name="items_url">http://2a25ce9546cf.ngrok.io/items/</string>
    <string name="events_url">http://2a25ce9546cf.ngrok.io/events/</string>
    <string name="services_url">http://2a25ce9546cf.ngrok.io/services/</string>
    <string name="products_url">http://2a25ce9546cf.ngrok.io/products/</string>
    <string name="items_image_url">http://2a25ce9546cf.ngrok.io/storage/items/</string>
    <string name="products_image_url">http://2a25ce9546cf.ngrok.io/storage/products/</string>
    <string name="events_image_url">http://2a25ce9546cf.ngrok.io/storage/events/</string>
    <string name="update_successfully">Updated</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="connection_error">No Network Connection</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="free">Free</string>
    <string name="set_price">Set Price</string>
    <string name="facebook_account">link of your Facebook account</string>
    <string name="phone_number">Your phone Number (*Required)</string>
    <string name="upload_image">Please, Upload image of the item</string>
    <string name="item_added">Item Added Successfully</string>
    <string name="product_added">Product Added Successfully</string>
    <string name="service_added">Service Added Successfully</string>
    <string name="event_added">Event Added Successfully</string>
    <string name="thanks_message">Thank you for being one of <b>HandInHand</b>.\n You always know how to make life brighter for everyone you know. We are waiting you to help more people again. <b>You make the world a nicer place.</b> \n We are waiting you to login again.</string>
    <string name="thanks_message_about">Thank you for being one of <b>HandInHand</b>.\n You always know how to make life brighter for everyone you know.</string>
    <string name="interest">Interest</string>
    <string name="contacts">Contacts</string>
    <string name="book">Book</string>
    <string name="spam_item">spam</string>
    <string name="inappropriate">Inappropriate</string>
    <string name="copied">Copied</string>
    <string name="delete">Delete</string>
    <string name="event_name">Event Name</string>
    <string name="deletion_warning">Are you sure you want to delete this item?</string>
    <string name="warning">Warning</string>
    <string name="deleted">Deleted</string>
    <string name="Reported">Reported</string>
    <string name="already_reported">this Item was already reported</string>
    <string name="permission_nedded">Permission Required</string>
    <string name="permission_reason">this permission is required to save image in your phone</string>
    <string name="permission_reason2">this permission is required so you can upload image from your phone</string>
    <string name="permission_reason3">this permission is required so you can call the required number directly</string>
    <string name="granted">Permission granted</string>
    <string name="denied">Permission denied</string>
    <string name="saved">Saved</string>
    <string name="save_error">unable save the image</string>
    <string name="location">Location</string>
    <string name="about">About the organizer</string>
    <string name="report_message">Remind that you should report only the items that may goes \n against our Term of service, thank you for your support</string>
    <string name="license">License</string>
    <string name="about_the_idea">About the idea</string>
    <string name="about_app">According to statistics about 3 million students go to universities each year. Students need materials to go through the college. Some of them can be provided by the university and others the student should get them himself. Providing materials for about 3 million students is huge but the problem is when these materials aren’t needed they are mostly thrown away each year. Life in university is different. It is the last stage of education before joining the market and discover how real work and projects are done. That’s why in university you will find events made by companies and organizations to teach and attract students, student union for helping students and other student activities and families. It appears that university is a more social place than school so why all these materials are wasted not donated? so we did it and we hope it will become helpful to other students.</string>
    <string name="why_use_it">The project consists of a website and an android application that provide a platform for students to find what they need and share their tools, books ,knowledge and many other things with each other.
The platform will provide four major services: -
\n<b>1.</b> A way to donate, sell, exchange and search for study materials like books and tools.
\n<b>2.</b> A way to find, offer and ask for services (questions - teaching or explaining a subject, conducting workshops – trips).
\n<b>3.</b> A way for students to know about all the important events happening soon.
\n<b>4.</b> A way for students who have a talent in making hand-made products to come to light and show their talent. It can be a start for their future career.
\n It is a highly scalable project with huge potential for more future work.</string>
    <string name="what_is_the_project">What is the project?</string>
    <string name="image_resource">Images</string>
    <string name="flat_icons_site">Flat Icon Site</string>
    <string name="mdc">MDC</string>
    <string name="mdc_icons">bottom navigation icons and the star and some other icons\nhttps://material.io/</string>
    <string name="freepik">filter icon and other icons: \nIcon made by Freepik from www.flaticon.com</string>
    <string name="undraw">Undraw</string>
    <string name="undrawres">all illustration and the default avatar image and the error illustration from Undraw:\nhttps://undraw.co/illustrations</string>
    <string name="made_with_love">Made with love by\n<b>HandinHand</b> team</string>
    <string name="android_team">Android Team</string>
    <string name="language">Language</string>
    <string name="ask_for_verification">Ask for verification</string>
    <string name="services">Services</string>
    <string name="change_password">Change password</string>
    <string name="verify_email">Verify Email</string>
</resources>