<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/more"
        app:showAsAction="always"
        android:icon="@drawable/ic_more">

        <menu>
            <item android:id="@+id/item_description_share"
                android:title="@string/share"
                app:showAsAction="never"/>

            <item android:id="@+id/item_description_report"
                android:title="@string/report"
                app:showAsAction="never"/>

            <item android:id="@+id/item_description_edit"
                android:title="@string/share"
                app:showAsAction="never"/>

            <item android:id="@+id/item_description_delete"
                android:title="@string/share"
                app:showAsAction="never"/>
        </menu>

    </item>
</menu>