<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:id="@+id/menu_top"
           android:checkableBehavior="single"
        >
        <item android:id="@id/profileFragment"
            android:title="Profile"
            />
        <item android:id="@+id/profileFragment1"
            android:title="Profile"
            />
        <item android:id="@+id/profileFragment2"
            android:title="Profile"
            />
        <item android:id="@+id/profileFragment3"
            android:title="Profile"
            />
        <item android:id="@+id/profileFragment4"
            android:title="Profile"
            />
    </group>

    <group android:id="@+id/contacts"
        android:checkableBehavior="single"
        >
        <item android:id="@+id/contact_us"
            android:title="@string/about_us"
            />
        <item android:id="@+id/about_us"
            android:title="@string/contact_us"
            />
    </group>


    <group android:id="@+id/log"
        android:checkableBehavior="single"
        >
        <item android:id="@+id/logout"
            android:title="@string/logout"
            />
    </group>

</menu>