<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.Fragments.SettingsActivityFragments.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settings_appbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:theme="@style/Widget.AppCompat.PopupMenu.Overflow"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/settings"
            app:titleTextColor="@color/textColorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/lang"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/state"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center"
            android:text="@string/language"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lang_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verification"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/state"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/askForVerificationText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center"
            android:text="@string/ask_for_verification"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verify_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/state"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/verify_email_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center"
            android:text="@string/verify_email"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/more_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/state"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center"
            android:text="@string/change_password"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>